--- a/app/src/main/res/layout/activity_browser_integration.xml
+++ b/app/src/main/res/layout/activity_browser_integration.xml
@@ -7,100 +7,113 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_user"
-            android:contentDescription="@string/profile"/>
-
-        <Spinner
-            android:id="@+id/browser_profile"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="48dip"
-            android:spinnerMode="dropdown"/>
-    </LinearLayout>
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="25dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/ic_profile"
+            android:src="@drawable/ic_action_user"
+            android:contentDescription="@string/profile"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"/>
+
+        <Spinner
+            android:id="@+id/profile_spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="32dp"
+            android:layout_toRightOf="@+id/ic_profile"
+            android:layout_alignParentRight="true"
+            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/tag_layout"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/ic_tag"
             android:src="@drawable/ic_action_tag"
             android:contentDescription="@string/tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"/>
 
         <AutoCompleteTextView
-            android:id="@+id/browser_tag"
+            android:id="@+id/tag_text"
             android:inputType="text"
             android:singleLine="true"
             android:maxLines="1"
             android:maxLength="25"
+            android:layout_toLeftOf="@+id/tag_settings"
+            android:layout_toRightOf="@+id/ic_tag"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:completionThreshold="2"
-            android:hint="@string/tag"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"/>
+            android:hint="@string/tag"/>
 
         <ImageButton
-            android:id="@+id/browser_tag_settings"
+            android:id="@+id/tag_settings"
             android:src="@drawable/ic_action_gear"
             android:contentDescription="@string/tag_settings"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
             style="?android:borderlessButtonStyle"/>
-    </LinearLayout>
+    </RelativeLayout>
 
-    <LinearLayout
-        android:layout_marginTop="25dp"
+
+    <RelativeLayout
+        android:id="@+id/master_key_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@+id/tag_layout">
 
         <ImageView
+            android:id="@+id/ic_key"
             android:src="@drawable/ic_action_key"
             android:contentDescription="@string/master_key"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"/>
 
         <EditText
-            android:id="@+id/browser_master_key"
+            android:id="@+id/master_key_text"
             android:inputType="textPassword"
+            android:fontFamily="sans-serif"
             android:singleLine="true"
             android:maxLines="1"
             android:maxLength="25"
-            android:fontFamily="sans-serif"
-            android:hint="@string/master_key"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"/>
+            android:layout_toLeftOf="@+id/digest_text"
+            android:layout_toRightOf="@+id/ic_key"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/master_key"/>
 
         <TextView
-            android:id="@+id/browser_digest"
+            android:id="@+id/digest_text"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
             android:gravity="center"
-            android:paddingLeft="4dip"
-            android:paddingRight="4dip"
-            android:layout_width="48dip"
-            android:layout_height="48dip"
             style="@android:style/TextAppearance.Medium"/>
-
-    </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:gravity="bottom"
@@ -123,7 +136,7 @@
             style="?android:buttonBarStyle">
 
             <Button
-                android:id="@+id/browser_cancel"
+                android:id="@+id/cancel_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -131,7 +144,7 @@
                 android:text="@string/cancel"/>
 
             <Button
-                android:id="@+id/browser_hash"
+                android:id="@+id/hash_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 style="?android:buttonBarButtonStyle"
