--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -28,7 +28,7 @@
 
             <EditText
                 android:inputType="text"
-                android:id="@+id/edit_profile_name"
+                android:id="@+id/profile_name_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -45,7 +45,7 @@
 
             <EditText
                 android:inputType="text"
-                android:id="@+id/edit_profile_private_key"
+                android:id="@+id/private_key_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
@@ -61,7 +61,7 @@
                 android:textColor="@color/text_gray"/>
 
             <Spinner
-                android:id="@+id/edit_profile_password_length"
+                android:id="@+id/password_length_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:spinnerStyle="@android:style/Widget.Spinner.DropDown"/>
@@ -75,7 +75,7 @@
                 android:textColor="@color/text_gray"/>
 
             <Spinner
-                android:id="@+id/edit_profile_password_type"
+                android:id="@+id/password_type_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:spinnerStyle="@android:style/Widget.Spinner.DropDown"/>
@@ -105,7 +105,7 @@
             style="?android:buttonBarStyle">
 
             <Button
-                android:id="@+id/edit_profile_discard"
+                android:id="@+id/discard_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -113,7 +113,7 @@
                 android:text="@string/discard"/>
 
             <Button
-                android:id="@+id/edit_profile_save"
+                android:id="@+id/save_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 style="?android:buttonBarButtonStyle"
