--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -21,7 +21,7 @@
 
         <EditText
             android:inputType="text"
-            android:id="@+id/add_profile_name"
+            android:id="@+id/profile_name_text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/small_spacing"
@@ -42,7 +42,7 @@
 
         <EditText
             android:inputType="text"
-            android:id="@+id/add_profile_private_key"
+            android:id="@+id/private_key_text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/small_spacing"
@@ -61,7 +61,7 @@
             android:textColor="@color/text_gray"/>
 
         <Spinner
-            android:id="@+id/add_profile_password_length"
+            android:id="@+id/password_length_spinner"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/small_spacing"
@@ -77,7 +77,7 @@
             android:textColor="@color/text_gray"/>
 
         <Spinner
-            android:id="@+id/add_profile_password_type"
+            android:id="@+id/password_type_spinner"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/small_spacing"
@@ -107,7 +107,7 @@
             style="?android:buttonBarStyle">
 
             <Button
-                android:id="@+id/add_profile_discard"
+                android:id="@+id/discard_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -115,7 +115,7 @@
                 android:text="@string/discard"/>
 
             <Button
-                android:id="@+id/add_profile_add"
+                android:id="@+id/add_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 style="?android:buttonBarButtonStyle"
